--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 				<li><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
 							class="hover">ห้างสรรพสินค้า</span></a></li>
 				<!-- <li><a href="#" id="tours"> <span class="label">Tours</span><span class="hover">Shop ON </span></a></li> -->
-				<li><a href="https://www.holidayhk.com/itineraries/en/" id="itineraries"> <span
-							class="label">แผนการเดินทาง</span><span class="hover">แผนการเดินทาง</span></a></li>
+				<!-- <li><a href="https://www.holidayhk.com/itineraries/en/" id="itineraries"> <span
+							class="label">แผนการเดินทาง</span><span class="hover">แผนการเดินทาง</span></a></li> -->
 			</ul>
 			<div class="live-map"><a class="icon-live-map" href="http://www.hktouristmap.com/"
 					target="_blank"><span>Live Map</span></a></div>
