--- a/flight-and-packages.html
+++ b/flight-and-packages.html
@@ -62,9 +62,9 @@
                 </div>
             </div>
             <ul>
-                <li><a href="flight-and-packages.html" id="flights-and-packages"> <span class="label">ตั๋วเครื่องบิน
-                            และแพคเกจ</span><span class="hover">ตั๋วเครื่องบิน และแพคเกจ</span></a></li>
-                <li class="active"><a href="attractions.html" id="attractions"> <span
+                <li class="active"><a href="#" id="flights-and-packages"> <span class="label">ตั๋วเครื่องบิน และแพคเกจ</span><span
+                            class="hover">ตั๋วเครื่องบิน และแพคเกจ</span></a></li>
+                <li><a href="attractions.html" id="attractions"> <span
                             class="label">สถานที่ท่องเที่ยว</span><span class="hover">สถานที่ท่องเที่ยว</span></a></li>
                 <li><a href="shopping.html" id="shops"> <span class="label">ร้านค้า</span><span class="hover">ร้านค้า</span></a>
                 </li>
@@ -77,7 +77,7 @@
                             class="hover">แผนการเดินทาง</span></a></li>
             </ul>
             <div class="live-map"><a class="icon-live-map" href="http://www.hktouristmap.com/"
-                    target="_blank"><span>Live Map</span></a></div>
+                    target="_blank"><span>Live Map</span></a></div> 
         </div>
         <div class="search-container">
             <div class="search">
@@ -135,7 +135,7 @@
 
 
             <section class="offer-container is-onscreen enabled" style="transition-delay: 150ms;">
-                <h2 class="is-onscreen">Top deals that will increase your shopping haul but not your budget</h2>
+                <h2 class="is-onscreen">Top deals that will increase your shopping haul but not your budget </h2>
                 <div class="offer-list-container">
                     <div class="offer-list loaded" data-load-more="true" data-load-more-num="8" data-default-num="8"
                         data-offer-type="feature">
@@ -353,160 +353,160 @@
 
 
 
-        </div>
+    </div>
 
-        <footer>
-            <div class="menu">
-                <ul>
-                    <li> <a href="#">เกี่ยวกับการท่องเที่ยวฮ่องกง</a></li>
-                    <li> <a href="#">ติดต่อเรา</a></li>
-                    <li> <a href="#">นโยบายความเป็นส่วนตัว</a></li>
-                    <li> <a href="#">นโยบายคุกกี้</a></li>
-                    <li> <a href="#">เงื่อนไขการใช้งาน</a></li>
-                </ul>
-                <div class="copyright">สงวนลิขสิทธิ์ © 2019 การท่องเที่ยวฮ่องกง สงวนสิทธิ์แต่เพียงผู้เดียว</div>
-            </div>
-            <div class="logo"><img class="tblogo" src="assets/images/common/footer_logo_en.png"
-                    alt="Hong Kong Tourism Board"></div>
-        </footer><a class="back-to-top icon-arrow-up" href="javascript:;"></a>
-        <div class="add-to-home-panel">
-            <div class="logo"><img src="assets/images/common/app_logo.png" alt="Hong Kong is ON"></div>
-            <div class="detail">
-                <div class="panel-content en-US">
-                    <p>Add this website to your Home screen</p>
-                    <div class="button"><a class="how-to-add" href="javascript:;">How to add</a><a class="later"
-                            href="javascript:;">Later</a></div>
-                </div>
-                <div class="panel-content zh-TW">
-                    <p>在手機上建立Hong Kong is ON捷徑</p>
-                    <div class="button"><a class="how-to-add" href="javascript:;">如何建立</a><a class="later"
-                            href="javascript:;">現在不要</a></div>
-                </div>
-                <div class="panel-content china">
-                    <p>在手机上建立Hong Kong is ON捷径</p>
-                    <div class="button"><a class="how-to-add" href="javascript:;">如何建立</a><a class="later"
-                            href="javascript:;">现在不要</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="how-to-add-container"><a class="btn-close" href="javascript:;"></a>
-            <div class="title">
-                <div class="en-US">How to add</div>
-                <div class="zh-TW">如何建立</div>
-                <div class="china">如何建立</div>
-            </div>
-            <div class="how-to-add-content">
-                <div class="app-lang en-US">
-                    <div class="ios">
-                        <ul>
-                            <li><span class="num">1</span><span class="text">Tap the Share icon in the Menu
-                                    bar</span><img src="assets/images/common/step_1_ios.png" alt></li>
-                            <li><span class="num">2</span><span class="text">Tap the Add to Home Screen tab</span><img
-                                    src="assets/images/common/step_2_ios.png" alt></li>
-                            <li><span class="num">3</span><span class="text">Tap the Add button</span><img
-                                    src="assets/images/common/step_3_ios.png" alt></li>
-                            <li><span class="num">4</span><span class="text">Now you can go to the website and enjoy the
-                                    best deals directly from your Home screen</span><img
-                                    src="assets/images/common/step_4_ios.png" alt></li>
-                        </ul>
-                    </div>
-                    <div class="android">
-                        <ul>
-                            <li><span class="num">1</span><span class="text">Tap the More icon in the Menu
-                                    bar</span><img src="assets/images/common/step_1_android.png" alt></li>
-                            <li><span class="num">2</span><span class="text">Tap the Add to Home Screen tab</span><img
-                                    src="assets/images/common/step_2_android.png" alt></li>
-                            <li><span class="num">3</span><span class="text">Tap the Add button</span><img
-                                    src="assets/images/common/step_3_android.png" alt></li>
-                            <li><span class="num">4</span><span class="text">Now you can go to the website and enjoy the
-                                    best deals directly from your Home screen</span><img
-                                    src="assets/images/common/step_4_android.png" alt></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="app-lang zh-TW">
-                    <div class="ios">
-                        <ul>
-                            <li><span class="num">1</span><span class="text">在選單按下分享圖示</span><img
-                                    src="assets/images/common/step_1_ios.png" alt></li>
-                            <li><span class="num">2</span><span class="text">按下「加至主畫面」</span><img
-                                    src="assets/images/common/step_2_ios_tc.png" alt></li>
-                            <li><span class="num">3</span><span class="text">按下「新增」</span><img
-                                    src="assets/images/common/step_3_ios_tc.png" alt></li>
-                            <li><span class="num">4</span><span class="text">隨時在手機主畫面按Hong Kong is
-                                    ON圖示，即享驚喜激賞。</span><img src="assets/images/common/step_4_ios.png" alt></li>
-                        </ul>
-                    </div>
-                    <div class="android">
-                        <ul>
-                            <li><span class="num">1</span><span class="text">在選單按下分享圖示</span><img
-                                    src="assets/images/common/step_1_android.png" alt></li>
-                            <li><span class="num">2</span><span class="text">按下「加到主畫面」</span><img
-                                    src="assets/images/common/step_2_android_tc.png" alt></li>
-                            <li><span class="num">3</span><span class="text">按下「新增」</span><img
-                                    src="assets/images/common/step_3_android_tc.png" alt></li>
-                            <li><span class="num">4</span><span class="text">隨時在手機主畫面按Hong Kong is
-                                    ON圖示，即享驚喜激賞。</span><img src="assets/images/common/step_4_android.png" alt></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="app-lang china">
-                    <div class="ios">
-                        <ul>
-                            <li><span class="num">1</span><span class="text">在选单按下分享图示</span><img
-                                    src="assets/images/common/step_1_ios.png" alt></li>
-                            <li><span class="num">2</span><span class="text">按下“添加到主屏幕”</span><img
-                                    src="assets/images/common/step_2_ios_sc.png" alt></li>
-                            <li><span class="num">3</span><span class="text">按下“添加”</span><img
-                                    src="assets/images/common/step_3_ios_sc.png" alt></li>
-                            <li><span class="num">4</span><span class="text">随时在手机主屏幕按Hong Kong is
-                                    ON图示，即享惊喜激赏。</span><img src="assets/images/common/step_4_ios.png" alt></li>
-                        </ul>
-                    </div>
-                    <div class="android">
-                        <ul>
-                            <li><span class="num">1</span><span class="text">在选单按下分享图示</span><img
-                                    src="assets/images/common/step_1_android.png" alt></li>
-                            <li><span class="num">2</span><span class="text">按下“添加到主屏幕”</span><img
-                                    src="assets/images/common/step_2_android_sc.png" alt></li>
-                            <li><span class="num">3</span><span class="text">按下“添加”</span><img
-                                    src="assets/images/common/step_3_android_sc.png" alt></li>
-                            <li><span class="num">4</span><span class="text">随时在手机主画面按Hong Kong is
-                                    ON图示，即享惊喜激赏。</span><img src="assets/images/common/step_4_android.png" alt></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="area-selector">
-            <div class="area-block"><a class="btn-close" href="javascript:;"></a>
-                <h3>Find offers by departure point</h3>
-                <div class="area-list">
-                    <ul>
-                        <li><a href="http://www.discoverhongkong.com/in/plan-your-trip/vacation-packages/index.jsp"
-                                data-area="IN" data-language target="_blank">India</a></li>
-                        <li><a href="http://www.discoverhongkong.com/id/plan-your-trip/vacation-packages/index.jsp"
-                                data-area="ID" data-language target="_blank">Indonesia</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="javascript:;" data-area="KR" data-language="kr" target="_blank">대한민국</a></li>
-                        <li><a href="http://www.discoverhongkong.com/seasia/plan-your-trip/vacation-packages/ph-offer.jsp"
-                                data-area="PH" data-language="eng" target="_blank">Philippines</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="http://www.discoverhongkong.com/th/plan-your-trip/vacation-packages/index.jsp"
-                                data-area="TH" data-language target="_blank">ประเทศไทย</a></li>
-                        <li><a href="http://www.discoverhongkong.com/th/plan-your-trip/vacation-packages/index.jsp"
-                                data-area="TH" data-language target="_blank">ประเทศไทย</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="javascript:;" data-area="KR" data-language="kr" target="_blank">대한민국</a></li>
-                        <li><a href="http://www.discoverhongkong.com/seasia/plan-your-trip/vacation-packages/ph-offer.jsp"
-                                data-area="PH" data-language="eng" target="_blank">Philippines</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <footer>
+		<div class="menu">
+			<ul>
+				<li> <a href="#">เกี่ยวกับการท่องเที่ยวฮ่องกง</a></li>
+				<li> <a href="#">ติดต่อเรา</a></li>
+				<li> <a href="#">นโยบายความเป็นส่วนตัว</a></li>
+				<li> <a href="#">นโยบายคุกกี้</a></li>
+				<li> <a href="#">เงื่อนไขการใช้งาน</a></li>
+			</ul>
+			<div class="copyright">สงวนลิขสิทธิ์ © 2019 การท่องเที่ยวฮ่องกง สงวนสิทธิ์แต่เพียงผู้เดียว</div>
+		</div>
+		<div class="logo"><img class="tblogo" src="assets/images/common/footer_logo_en.png"
+				alt="Hong Kong Tourism Board"></div>
+	</footer><a class="back-to-top icon-arrow-up" href="javascript:;"></a>
+	<div class="add-to-home-panel">
+		<div class="logo"><img src="assets/images/common/app_logo.png" alt="Hong Kong is ON"></div>
+		<div class="detail">
+			<div class="panel-content en-US">
+				<p>Add this website to your Home screen</p>
+				<div class="button"><a class="how-to-add" href="javascript:;">How to add</a><a class="later"
+						href="javascript:;">Later</a></div>
+			</div>
+			<div class="panel-content zh-TW">
+				<p>在手機上建立Hong Kong is ON捷徑</p>
+				<div class="button"><a class="how-to-add" href="javascript:;">如何建立</a><a class="later"
+						href="javascript:;">現在不要</a></div>
+			</div>
+			<div class="panel-content china">
+				<p>在手机上建立Hong Kong is ON捷径</p>
+				<div class="button"><a class="how-to-add" href="javascript:;">如何建立</a><a class="later"
+						href="javascript:;">现在不要</a></div>
+			</div>
+		</div>
+	</div>
+	<div class="how-to-add-container"><a class="btn-close" href="javascript:;"></a>
+		<div class="title">
+			<div class="en-US">How to add</div>
+			<div class="zh-TW">如何建立</div>
+			<div class="china">如何建立</div>
+		</div>
+		<div class="how-to-add-content">
+			<div class="app-lang en-US">
+				<div class="ios">
+					<ul>
+						<li><span class="num">1</span><span class="text">Tap the Share icon in the Menu bar</span><img
+								src="assets/images/common/step_1_ios.png" alt></li>
+						<li><span class="num">2</span><span class="text">Tap the Add to Home Screen tab</span><img
+								src="assets/images/common/step_2_ios.png" alt></li>
+						<li><span class="num">3</span><span class="text">Tap the Add button</span><img
+								src="assets/images/common/step_3_ios.png" alt></li>
+						<li><span class="num">4</span><span class="text">Now you can go to the website and enjoy the
+								best deals directly from your Home screen</span><img
+								src="assets/images/common/step_4_ios.png" alt></li>
+					</ul>
+				</div>
+				<div class="android">
+					<ul>
+						<li><span class="num">1</span><span class="text">Tap the More icon in the Menu bar</span><img
+								src="assets/images/common/step_1_android.png" alt></li>
+						<li><span class="num">2</span><span class="text">Tap the Add to Home Screen tab</span><img
+								src="assets/images/common/step_2_android.png" alt></li>
+						<li><span class="num">3</span><span class="text">Tap the Add button</span><img
+								src="assets/images/common/step_3_android.png" alt></li>
+						<li><span class="num">4</span><span class="text">Now you can go to the website and enjoy the
+								best deals directly from your Home screen</span><img
+								src="assets/images/common/step_4_android.png" alt></li>
+					</ul>
+				</div>
+			</div>
+			<div class="app-lang zh-TW">
+				<div class="ios">
+					<ul>
+						<li><span class="num">1</span><span class="text">在選單按下分享圖示</span><img
+								src="assets/images/common/step_1_ios.png" alt></li>
+						<li><span class="num">2</span><span class="text">按下「加至主畫面」</span><img
+								src="assets/images/common/step_2_ios_tc.png" alt></li>
+						<li><span class="num">3</span><span class="text">按下「新增」</span><img
+								src="assets/images/common/step_3_ios_tc.png" alt></li>
+						<li><span class="num">4</span><span class="text">隨時在手機主畫面按Hong Kong is ON圖示，即享驚喜激賞。</span><img
+								src="assets/images/common/step_4_ios.png" alt></li>
+					</ul>
+				</div>
+				<div class="android">
+					<ul>
+						<li><span class="num">1</span><span class="text">在選單按下分享圖示</span><img
+								src="assets/images/common/step_1_android.png" alt></li>
+						<li><span class="num">2</span><span class="text">按下「加到主畫面」</span><img
+								src="assets/images/common/step_2_android_tc.png" alt></li>
+						<li><span class="num">3</span><span class="text">按下「新增」</span><img
+								src="assets/images/common/step_3_android_tc.png" alt></li>
+						<li><span class="num">4</span><span class="text">隨時在手機主畫面按Hong Kong is ON圖示，即享驚喜激賞。</span><img
+								src="assets/images/common/step_4_android.png" alt></li>
+					</ul>
+				</div>
+			</div>
+			<div class="app-lang china">
+				<div class="ios">
+					<ul>
+						<li><span class="num">1</span><span class="text">在选单按下分享图示</span><img
+								src="assets/images/common/step_1_ios.png" alt></li>
+						<li><span class="num">2</span><span class="text">按下“添加到主屏幕”</span><img
+								src="assets/images/common/step_2_ios_sc.png" alt></li>
+						<li><span class="num">3</span><span class="text">按下“添加”</span><img
+								src="assets/images/common/step_3_ios_sc.png" alt></li>
+						<li><span class="num">4</span><span class="text">随时在手机主屏幕按Hong Kong is ON图示，即享惊喜激赏。</span><img
+								src="assets/images/common/step_4_ios.png" alt></li>
+					</ul>
+				</div>
+				<div class="android">
+					<ul>
+						<li><span class="num">1</span><span class="text">在选单按下分享图示</span><img
+								src="assets/images/common/step_1_android.png" alt></li>
+						<li><span class="num">2</span><span class="text">按下“添加到主屏幕”</span><img
+								src="assets/images/common/step_2_android_sc.png" alt></li>
+						<li><span class="num">3</span><span class="text">按下“添加”</span><img
+								src="assets/images/common/step_3_android_sc.png" alt></li>
+						<li><span class="num">4</span><span class="text">随时在手机主画面按Hong Kong is ON图示，即享惊喜激赏。</span><img
+								src="assets/images/common/step_4_android.png" alt></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="area-selector">
+		<div class="area-block"><a class="btn-close" href="javascript:;"></a>
+			<h3>Find offers by departure point</h3>
+			<div class="area-list">
+				<ul>
+					<li><a href="http://www.discoverhongkong.com/in/plan-your-trip/vacation-packages/index.jsp"
+							data-area="IN" data-language target="_blank">India</a></li>
+					<li><a href="http://www.discoverhongkong.com/id/plan-your-trip/vacation-packages/index.jsp"
+							data-area="ID" data-language target="_blank">Indonesia</a></li>
+				</ul>
+				<ul>
+					<li><a href="javascript:;" data-area="KR" data-language="kr" target="_blank">대한민국</a></li>
+					<li><a href="http://www.discoverhongkong.com/seasia/plan-your-trip/vacation-packages/ph-offer.jsp"
+							data-area="PH" data-language="eng" target="_blank">Philippines</a></li>
+				</ul>
+				<ul>
+					<li><a href="http://www.discoverhongkong.com/th/plan-your-trip/vacation-packages/index.jsp"
+							data-area="TH" data-language target="_blank">ประเทศไทย</a></li>
+					<li><a href="http://www.discoverhongkong.com/th/plan-your-trip/vacation-packages/index.jsp"
+							data-area="TH" data-language target="_blank">ประเทศไทย</a></li>
+				</ul>
+				<ul>
+					<li><a href="javascript:;" data-area="KR" data-language="kr" target="_blank">대한민국</a></li>
+					<li><a href="http://www.discoverhongkong.com/seasia/plan-your-trip/vacation-packages/ph-offer.jsp"
+							data-area="PH" data-language="eng" target="_blank">Philippines</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
