--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</div>
 	<header>
 		<div class="overlay"></div>
-		<div class="logo"> <a href="index.html"><img src="../assets/images/common/open-house-website-lockup_500x132.jpeg"
+		<div class="logo"> <a href="index.html"><img src="assets/images/common/open-house-website-lockup_500x132.jpeg"
 					alt="Hello Hong Kong"></a></div>
 		<div class="menu">
 			<div class="search-container">
