--- a/shopping.html
+++ b/shopping.html
@@ -113,13 +113,13 @@
                         <div class="swiper-wrapper">
                             <figure class="swiper-slide">
                                 <div class="slide-inner multiDeviceBg"
-                                    style="background-image:url(assets\images\banner/hktb-hello-hk-offerings-website-desktop-section-banner_shops_animated_en_20200519.gif)"
-                                    data-src-desktop="assets\images\banner/hktb-hello-hk-offerings-website-desktop-section-banner_shops_animated_en_20200519.gif"
-                                    data-src-mobile="assets\images\banner/hktb-hello-hk-offerings-website-mobile-section-banner_shops_animated_en_20200519.gif">
+                                    style="background-image:url(assets\images\banner\hktb-open-house-homepage-section-banner_1920x500_en_20200918-shopping.gif)"
+                                    data-src-desktop="assets\images\banner\hktb-open-house-homepage-section-banner_1920x500_en_20200918-shopping.gif"
+                                    data-src-mobile="assets\images\banner\hktb-open-house-homepage-section-banner_750x480_mobile_en_20200918-shopping.gif">
                                 </div>
                                 <img class="multiDeviceImg"
-                                    data-src-desktop="assets\images\banner/hktb-hello-hk-offerings-website-desktop-section-banner_shops_animated_en_20200519.gif"
-                                    data-src-mobile="assets\images\banner/hktb-hello-hk-offerings-website-mobile-section-banner_shops_animated_en_20200519.gif"
+                                    data-src-desktop="assets\images\banner\hktb-open-house-homepage-section-banner_1920x500_en_20200918-shopping.gif"
+                                    data-src-mobile="assets\images\banner\hktb-open-house-homepage-section-banner_750x480_mobile_en_20200918-shopping.gif"
                                     alt="">
                             </figure>
                         </div>
