--- a/dining.html
+++ b/dining.html
@@ -74,8 +74,8 @@
                 <li><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
                             class="hover">ห้างสรรพสินค้า</span></a></li>
                 <!-- <li><a href="#" id="tours"> <span class="label">Tours</span><span class="hover">Shop ON </span></a></li> -->
-                <li><a href="https://www.holidayhk.com/itineraries/en/" id="itineraries"> <span class="label">แผนการเดินทาง</span><span
-                            class="hover">แผนการเดินทาง</span></a></li>
+                <!-- <li><a href="https://www.holidayhk.com/itineraries/en/" id="itineraries"> <span class="label">แผนการเดินทาง</span><span
+                            class="hover">แผนการเดินทาง</span></a></li> -->
             </ul>
             <div class="live-map"><a class="icon-live-map" href="http://www.hktouristmap.com/"
                     target="_blank"><span>Live Map</span></a></div>
@@ -112,13 +112,13 @@
                         <div class="swiper-wrapper">
                             <figure class="swiper-slide">
                                 <div class="slide-inner multiDeviceBg"
-                                    style="background-image:url(assets\images\banner/hktb-hello-hk-offerings-website-desktop-section-banner_food-drink_animated_en_20200519.gif)"
-                                    data-src-desktop="assets\images\banner/hktb-hello-hk-offerings-website-desktop-section-banner_food-drink_animated_en_20200519.gif"
-                                    data-src-mobile="assets\images\banner/hktb-hello-hk-offerings-website-mobile-section-banner_food-drink_animated_en_20200519.gif">
+                                    style="background-image:url(assets\images\banner\hktb-open-house-homepage-section-banner_1920x500_en_20200918-dining3.gif)"
+                                    data-src-desktop="assets\images\banner\hktb-open-house-homepage-section-banner_1920x500_en_20200918-dining3.gif"
+                                    data-src-mobile="assets\images\banner\hktb-open-house-homepage-section-banner_750x480_mobile_en_20200918-dining.gif">
                                 </div>
                                 <img class="multiDeviceImg"
-                                    data-src-desktop="assets\images\banner/hktb-hello-hk-offerings-website-desktop-section-banner_food-drink_animated_en_20200519.gif"
-                                    data-src-mobile="assets\images\banner/hktb-hello-hk-offerings-website-mobile-section-banner_food-drink_animated_en_20200519.gif"
+                                    data-src-desktop="assets\images\banner\hktb-open-house-homepage-section-banner_1920x500_en_20200918-dining3.gif"
+                                    data-src-mobile="assets\images\banner\hktb-open-house-homepage-section-banner_750x480_mobile_en_20200918-dining.gif"
                                     alt="">
                             </figure>
                         </div>
