edit homepage index

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<section class="offer-grid-container attractions cross-sell-banner">
 				<!-- <h2>Attractions</h2>
 			<div class="desc">Check out Hong Kong Tourism Board’s specially curated offers.</div> -->
-				<div class="offer-list-grid-container is-landing swiper-container top-right">
+				<!-- <div class="offer-list-grid-container is-landing swiper-container top-right">
 					<div class="offer-banner-container">
 						<div class="offer-banner">
 							<div class="offer-box">
@@ -234,7 +234,7 @@
 				<div class="bottom">
 					<div class="see-more"><a class="btn-cta" href="offer-details.html"> <span
 								class="label">ดูเพิ่มเติม</span><span class="hover">ดูเพิ่มเติม</span></a></div>
-				</div>
+				</div> -->
 				<!-- <div style="position:relative">
 				<div class="promotion-banner swiper-container">
 					<div class="swiper-wrapper">
@@ -281,105 +281,91 @@
 						</div>
 					</div>
 					<div class="offer-list-grid swiper-wrapper" data-offer-type="other">
-						<div class="offer-block-grid swiper-slide"><a href="offer-details.html" target="_self">
-								<div class="flag">BUY 1 GET 1 FREE</div>
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets/images/common/offer-1.jpg"
-										alt="Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad ipsum dolor ksoq esit amet">
-									<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-											alt="Cathay Pacific"></div>
-									<h3 class="merchant">Cathay Pacific</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a href="offer-details.html" target="_self">
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets/images/common/offer-1.jpg"
-										alt="Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad ipsum dolor ksoq esit amet">
-									<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-											alt="Cathay Pacific"></div>
-									<h3 class="merchant">Cathay Pacific</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a class="has-quality-logo" href="offer-details.html"
-								target="_self">
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets/images/common/offer-1.jpg"
-										alt="Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad ipsum dolor ksoq esit amet">
-									<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-											alt="Cathay Pacific"></div>
-									<h3 class="merchant">Cathay Pacific</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad
-										ipsum dolor ksoq esit amet</p>
-								</div>
-								<div class="quality-provider">
-									<div class="logo"><img src="assets/images/common/logo-qts.png"
-											alt="QTS Scheme Merchants"></div><span>QTS Scheme Merchants</span>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a class="has-quality-logo" href="offer-details.html"
-								target="_self">
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets/images/common/offer-1.jpg"
-										alt="Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad ipsum dolor ksoq esit amet">
-									<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-											alt="Cathay Pacific"></div>
-									<h3 class="merchant">Cathay Pacific</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad
-										ipsum dolor ksoq esit amet</p>
-								</div>
-								<div class="quality-provider">
-									<div class="logo"><img src="assets/images/common/logo-qts.png"
-											alt="QTS Scheme Merchants"></div><span>QTS Scheme Merchants</span>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a class="has-quality-logo" href="offer-details.html"
-								target="_self">
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets/images/common/offer-1.jpg"
-										alt="Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad ipsum dolor ksoq esit amet">
-									<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-											alt="Cathay Pacific"></div>
-									<h3 class="merchant">Cathay Pacific</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad
-										ipsum dolor ksoq esit amet</p>
-								</div>
-								<div class="quality-provider">
-									<div class="logo"><img src="assets/images/common/logo-qts.png"
-											alt="QTS Scheme Merchants"></div><span>QTS Scheme Merchants</span>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a class="has-quality-logo" href="offer-details.html"
-								target="_self">
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets/images/common/offer-1.jpg"
-										alt="Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad ipsum dolor ksoq esit amet">
-									<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-											alt="Cathay Pacific"></div>
-									<h3 class="merchant">Cathay Pacific</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Lorem ipsum dolor sit amet ksjqco nsectetur adipiscing elit kodqad
-										ipsum dolor ksoq esit amet</p>
-								</div>
-								<div class="quality-provider">
-									<div class="logo"><img src="assets/images/common/logo-qts.png"
-											alt="QTS Scheme Merchants"></div><span>QTS Scheme Merchants</span>
-								</div>
-							</a></div>
+						<div class="offer-block-grid swiper-slide"><a href="dining/food0026.html" target="_self">
+							<!-- <div class="flag">50% discount on Barbecued Pork with Honey Sauce (dine-in only)</div> -->
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_26_01.jpg"
+									alt="50% discount on Barbecued Pork with Honey Sauce (dine-in only)">
+								<div class="merchant-logo"><img src="assets/images/offer-details/EN_Dine_26_logo.png"
+										alt="Seventh Son Restaurant - The Wharney Guang Dong Hotel HK"></div>
+								<h3 class="merchant">Seventh Son Restaurant - The Wharney Guang Dong Hotel HK</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">50% discount on Barbecued Pork with Honey Sauce (dine-in only)
+								</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0027.html" target="_self">
+							<!-- <div class="flag">Buy one, get one free Premium Seasonal Kaiseki Menu</div> -->
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_27_01.jpg"
+									alt="Buy one, get one free Premium Seasonal Kaiseki Menu">
+								<div class="merchant-logo"><img src="assets/images/offer-details/EN_Dine_27_logo.png"
+										alt="Ta-ke"></div>
+								<h3 class="merchant">Ta-ke</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Buy one, get one free Premium Seasonal Kaiseki Menu
+								</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0049.html" target="_self">
+							<!-- <div class="flag">Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)</div> -->
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_49_04.jpg"
+									alt="Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)">
+								<div class="merchant-logo"><img src="assets/images/offer-details/EN_Dine_49_logo.jpg"
+										alt="Jardin de Jade"></div>
+								<h3 class="merchant">Jardin de Jade</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)
+								</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0051.html" target="_self">
+							<!-- <div class="flag">Buy one, get one free Signature Dishes & Stew Set (for 2 persons)</div> -->
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_51_01.jpg"
+									alt="Buy one, get one free Signature Dishes & Stew Set (for 2 persons)">
+								<div class="merchant-logo"><img src="assets/images/offer-details/EN_Dine_51_logo.jpg"
+										alt="Ser Wong Fun"></div>
+								<h3 class="merchant">Ser Wong Fun</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Buy one, get one free Signature Dishes & Stew Set (for 2 persons)
+								</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0999.html" target="_self">
+							<!-- <div class="flag">Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky Draw</div> -->
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_999_01_amex.jpg"
+									alt="Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky Draw">
+								<div class="merchant-logo"><img src="assets/images/offer-details/EN_Dine_999_logo_amex.png"
+										alt="American Express"></div>
+								<h3 class="merchant">American Express</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky Draw
+								</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food1006.html" target="_self">
+							<!-- <div class="flag">HK$50 cash coupon upon dine-in purchase at every HK$200</div> -->
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\En_Dine_1006_01.jpg"
+									alt="HK$50 cash coupon upon dine-in purchase at every HK$200">
+								<div class="merchant-logo"><img src="assets/images/offer-details/En_Dine_1006_logo.png"
+										alt="LHGroup & Kabushikigaisha Limited"></div>
+								<h3 class="merchant">LHGroup & Kabushikigaisha Limited</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">HK$50 cash coupon upon dine-in purchase at every HK$200
+								</p>
+							</div>
+						</a></div> 
+
 					</div>
 				</div>
 				<div class="bottom">
