edit header and css header

--- a/dining.html
+++ b/dining.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-lang="en-hk" data-region="HK" data-type="food-and-drink" xml:lang="en-HK">
+<html class="th" data-lang="th" xml:lang="th-th" lang="th-th">
 
 <head>
     <!-- Google Tag Manager -->
