--- a/malls.html
+++ b/malls.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-lang="en-hk" data-region="HK" data-type="malls" xml:lang="en-HK">
+<html class="th" data-lang="th" xml:lang="th-th" lang="th-th">
 
 <head>
     <!-- Google Tag Manager -->
@@ -71,8 +71,8 @@
                 </li>
                 <li><a href="dining.html" id="food-and-drink"> <span class="label">อาหาร และเครื่องดื่ม</span><span
                             class="hover">อาหาร และเครื่องดื่ม</span></a></li>
-                <li class="active"><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
-                            class="hover">ห้างสรรพสินค้า</span></a></li>
+                <li><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
+							class="hover">ห้างสรรพสินค้า</span></a></li>
                 <!-- <li><a href="#" id="tours"> <span class="label">Tours</span><span class="hover">Shop ON </span></a></li> -->
                 <!-- <li><a href="https://www.holidayhk.com/itineraries/en/" id="itineraries"> <span
                             class="label">แผนการเดินทาง</span><span class="hover">แผนการเดินทาง</span></a></li> -->
