--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta property="og:site_name" content="Consumer offers website">
 	<meta property="og:type" content="website">
-	<link rel="icon" href="../assets/images/favicon.ico">
+	<link rel="icon" href="assets/images/favicon.ico">
 	<link rel="apple-touch-icon" href="https://hkison.com/assets/images/common/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="512x512"
 		href="https://hkison.com/assets/images/common/apple-touch-icon-512x512.png">
