--- a/dining.html
+++ b/dining.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:site_name" content="Hello Hong Kong HOLIDAY AT HOME">
     <meta property="og:type" content="website">
-    <link rel="icon" href="/assets/images/fav.ico">
+    <link rel="icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="/assets/images/commom/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="512x512" href="/assets/images/common/apple-touch-icon-512x512.png">
     <title>Shopping | Hello Hong Kong HOLIDAY AT HOME</title>
